# CombatCoaching

./: .gitignore  CombatLedger_Live_Coaching_Roadmap.md  combatledger_live_coach_mockup.html  index.html  overlay.html  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
addon/: CombatCoach.lua  CombatCoach.toc
data/encounters/: example_encounter.toml
data/specs/: death_knight_blood.toml  death_knight_frost.toml  death_knight_unholy.toml  demon_hunter_havoc.toml  demon_hunter_vengeance.toml  druid_balance.toml  druid_feral.toml  druid_guardian.toml  druid_restoration.toml  evoker_augmentation.toml  evoker_devastation.toml  evoker_preservation.toml  hunter_beast_mastery.toml  hunter_marksmanship.toml  hunter_survival.toml  mage_arcane.toml  mage_fire.toml  mage_frost.toml  monk_brewmaster.toml  monk_mistweaver.toml  monk_windwalker.toml  paladin_holy.toml  paladin_protection.toml  paladin_retribution.toml  priest_discipline.toml  priest_holy.toml  priest_shadow.toml  rogue_assassination.toml  rogue_outlaw.toml  rogue_subtlety.toml  shaman_elemental.toml  shaman_enhancement.toml  shaman_restoration.toml  warlock_affliction.toml  warlock_demonology.toml  warlock_destruction.toml  warrior_arms.toml  warrior_fury.toml  warrior_protection.toml
src/: main.tsx  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  engine.rs  identity.rs  ipc.rs  lib.rs  main.rs  parser.rs  specs.rs  state.rs  tailer.rs
src-tauri/src/rules/: avoidable_repeat.rs  cooldown_drift.rs  defensive_timing.rs  gcd_gap.rs  interrupt_miss.rs  interrupt_success.rs  mod.rs
src/components/: ConnectionStatus.module.css  ConnectionStatus.tsx  NowFeed.module.css  NowFeed.tsx  OverlayLayoutEditor.module.css  OverlayLayoutEditor.tsx  PullClock.module.css  PullClock.tsx  PullDebriefPanel.module.css  PullDebriefPanel.tsx  StatWidgets.module.css  StatWidgets.tsx  Timeline.module.css  Timeline.tsx
src/hooks/: useTauriEvents.ts
src/styles/: globals.css  overlay.css  settings.css
src/types/: events.ts
