[package]
name    = "combat-ledger-live-coach"
version = "0.1.0"
edition = "2021"

[lib]
name       = "combat_ledger_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "combat-ledger-live-coach"
path = "src/main.rs"

[dependencies]
tauri                = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog  = "2"
tauri-plugin-shell   = "2"
tokio                = { version = "1", features = ["full"] }
notify               = "6"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
toml                 = "0.8"
rusqlite             = { version = "0.31", features = ["bundled"] }
anyhow               = "1"
thiserror            = "1"
once_cell            = "1"
tracing              = "1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
